# gif2vtf

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
src/gif2vtf/: __init__.py  __main__.py  cli.py  formats.py  frame_ops.py  gif_loader.py  overlay.py  presets.py  resize.py  vtf_builder.py
tests/: conftest.py  test_builder.py  test_cli.py  test_frame_ops.py  test_overlay.py  test_resize.py
