[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gif2vtf"
version = "0.1.0"
description = "Convert animated GIFs into animated Valve Texture Format (.vtf) files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["vtf", "gif", "source engine", "valve", "spray", "texture"]
dependencies = [
    "srctools >= 2.4",
    "Pillow >= 9.0",
]

[project.optional-dependencies]
dev = ["pytest >= 7.0"]

[project.scripts]
gif2vtf = "gif2vtf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
